--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Anime Blog</h1>
 <p>Welcome to the Anime Blog!</p>
+
 <%= link_to "Log In/Sign Up", user_session_path %><br>
 <%= link_to "Sign Out", destroy_user_session_path, data: { turbo_method: :delete } %><br>
+<%= link_to "Posts", posts_path %><br>
 <img src="https://talkwithdonuts.com/wp-content/uploads/2020/02/mha-feat.jpg" alt="BNHA" width="600" height="315">
